--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:12.7-alpine AS build
 WORKDIR ./app/web
 COPY package.json package-lock.json ./
-RUN npm install &&
-    / ng build --prod
+RUN npm install
+RUN ng build --prod
 
 
 
