--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:12.7-alpine AS build
 WORKDIR ./app/web
-COPY package.json .
+package.json package-lock.json ./
 RUN npm install
 RUN ng build --prod
 
