--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -2,11 +2,9 @@ FROM node:12.7-alpine AS build
 WORKDIR ./app/web
 RUN npm install
 FROM nginx:1.17.1-alpine
-COPY nginx.conf /etc/nginx/nginx.conf
-RUN ng build --prod
-
+RUN npm run build --prod
 
 
 FROM httpd:2.4
 RUN rm /usr/local/apache2/htdocs/*
-COPY ./app/web/dist/web/* /usr/local/apache2/htdocs/
+COPY --from=build ./app/web/dist/web/* /usr/local/apache2/htdocs/
