--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -2,7 +2,9 @@ FROM node:12.7-alpine AS build
 WORKDIR ./app/web
 RUN npm install
 FROM nginx:1.17.1-alpine
-RUN npm install -g @angular
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y nodejs \
+    npm
 RUN npm run build --prod
 
 
