--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,10 +1,6 @@
-FROM node:12.7-alpine AS build
+FROM node:lastest
 WORKDIR ./app/web
 RUN npm install
-FROM nginx:1.17.1-alpine
-RUN apt-get update && apt-get upgrade -y && \
-    apt-get install -y nodejs \
-    npm
 RUN npm run build --prod
 
 
