--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -4,7 +4,7 @@ RUN npm install -g npm@7.14.0
 COPY . .
 WORKDIR ./app/web
 RUN alias ng="/usr/local/lib/node_modules/node/lib/node_modules/@angular/cli/bin/ng"
-RUN node_modules/.bin/ng build --prod
+RUN npm run build --prod
 
 
 FROM httpd:2.4
