--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:latest
 WORKDIR ./app/web
 RUN npm install
 COPY . .
-RUN ls
+RUN ls/app/web
 RUN ./app/web/node_modules/.bin/ng build --prod
 
 
