--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,3 +1,3 @@
 FROM httpd:2.4
 RUN rm /usr/local/apache2/htdocs/*
-COPY --from=build ./app/web/dist/web/* /usr/local/apache2/htdocs/
+COPY ./app/web/dist/web/* /usr/local/apache2/htdocs/
