--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,4 +1,5 @@
 FROM httpd:2.4
+WORKDIR ./app/web/
 RUN rm /usr/local/apache2/htdocs/*
 RUN ls
-RUN mv ./app/web/dist/web/ /usr/local/apache2/htdocs/
+RUN mv ./dist/web/ /usr/local/apache2/htdocs/
