--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -2,4 +2,4 @@ FROM httpd:2.4
 WORKDIR ./app/web/
 RUN rm /usr/local/apache2/htdocs/*
 RUN ls
-RUN mv ./dist/web/ /usr/local/apache2/htdocs/
+RUN mv ./app/web/dist/web/ /usr/local/apache2/htdocs/
