--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,3 +1,4 @@
 FROM httpd:2.4
+WORKDIR ./app/web/
 RUN ls
-RUN mv ./app/web/dist/web/ /usr/local/apache2/htdocs/
+RUN cp ./dist/web/ /usr/local/apache2/htdocs/
