--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,4 +1,3 @@
 FROM httpd:2.4
-WORKDIR ./app/web/
 RUN ls
-RUN cp ./dist/web/ /usr/local/apache2/htdocs/
+COPY .app/web/dist/web/ /usr/local/apache2/htdocs/
