--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -2,5 +2,5 @@ FROM httpd:2.4
 COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
 
-RUN ls
+RUN ls ./web/dist/web/
 COPY ./web/dist/web/ /usr/local/apache2/htdocs/
