--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -3,4 +3,4 @@ COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
 
 RUN ls ./web/dist/web/
-COPY ./web/dist/web/ /usr/local/apache2/htdocs/
+COPY ./web/dist/web/* /usr/local/apache2/htdocs/
