--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -3,4 +3,5 @@ COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
 
 RUN ls ./web/dist/web/
-COPY /etc/usr/src/app/web/dist/web/* /usr/local/apache2/htdocs/
+RUN cat /etc/usr/src/app/web/dist/web/index.html
+#COPY /etc/usr/src/app/web/dist/web/* /usr/local/apache2/htdocs/
