--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,4 +1,5 @@
 FROM httpd:2.4
 COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
-RUN cp ./web/dist/web/* /usr/local/apache2/htdocs/ -r
+#RUN cp ./web/dist/web/* /usr/local/apache2/htdocs/ -r
+RUN cp ./* /usr/local/apache2/htdocs/ -r
