--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -8,7 +8,7 @@ FROM node:latest as node
 COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
 RUN npm install
-RUN npm run build --prod
+RUN ng build --prod
 
 FROM nginx:alpine
 COPY --from=node /app/dist/web /usr/share/nginx/html
