--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,14 +1,14 @@
-#FROM httpd:2.4
-#COPY /app /etc/usr/src/app
-#WORKDIR /etc/usr/src/app
-#RUN cp ./web/dist/web/* /usr/local/apache2/htdocs/ -r
-#RUN cp ./* /usr/local/apache2/htdocs/ -r
-
-FROM node:latest as node
+FROM httpd:2.4
 COPY /app /etc/usr/src/app
-WORKDIR /etc/usr/src/app/web
-RUN npm install
-RUN npm run build --prod
+WORKDIR /etc/usr/src/app
+RUN cp ./web/dist/web/* /usr/local/apache2/htdocs/ -r
+RUN cp ./* /usr/local/apache2/htdocs/ -r
 
-FROM nginx:alpine
-COPY --from=node /etc/usr/src/app/web/dist/web /usr/share/nginx/html
+#FROM node:latest as node
+#COPY /app /etc/usr/src/app
+#WORKDIR /etc/usr/src/app/web
+#RUN npm install
+#RUN npm run build --prod
+
+#FROM nginx:alpine
+#COPY --from=node /etc/usr/src/app/web/dist/web /usr/share/nginx/html
