--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -3,14 +3,16 @@ COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
 RUN rm /usr/local/apache2/htdocs/*
 #RUN cp ./* /usr/local/apache2/htdocs/ -r
-RUN cp ./web/dist/web/* /usr/local/apache2/htdocs/ -r
+RUN npm install
+
+RUN cd ./web
+RUN npm run build --prod
+RUN cp ./dist/web/* /usr/local/apache2/htdocs/ -r
 #RUN cp ./* /usr/local/apache2/htdocs/ -r
 
-#FROM node:latest as node
+FROM node:latest as node
 #COPY /app /etc/usr/src/app
 #WORKDIR /etc/usr/src/app/web
-#RUN npm install
-#RUN npm run build --prod
 
 #FROM nginx:alpine
 #COPY --from=node /etc/usr/src/app/web/dist/web /usr/share/nginx/html
