--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -3,10 +3,10 @@ COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app
 RUN rm /usr/local/apache2/htdocs/*
 #RUN cp ./* /usr/local/apache2/htdocs/ -r
+WORKDIR /etc/usr/src/app/web
 FROM node:latest as node
 RUN npm install
 
-RUN cd ./web
 RUN npm run build --prod
 RUN cp ./dist/web/* /usr/local/apache2/htdocs/ -r
 #RUN cp ./* /usr/local/apache2/htdocs/ -r
