--- a/IoTServicesCode/webapp_frontend/Dockerfile
+++ b/IoTServicesCode/webapp_frontend/Dockerfile
@@ -1,17 +1,13 @@
-FROM httpd:2.4
+
 FROM node:latest as node
-
-
-
-
 COPY /app /etc/usr/src/app
 WORKDIR /etc/usr/src/app/web
 RUN npm install
 RUN npm run build --prod
 
-
-#COPY /app /etc/usr/src/app
-#WORKDIR /etc/usr/src/app/web
+FROM httpd:2.4
+COPY --from=node /etc/usr/src/app /etc/usr/src/app
+WORKDIR /etc/usr/src/app/web
 RUN rm /usr/local/apache2/htdocs/* -r
 RUN cp ./dist/web/* /usr/local/apache2/htdocs/ -r
 
